[workspace]
resolver = "2"
members = [
    "graphql_client",
    "graphql_client_cli",
    "graphql_client_codegen",
    "graphql-introspection-query",
    "graphql_query_derive",

    # Example crates.
    "examples/*",
]

[patch.crates-io]
openssl-sys = { git = "https://github.com/vishwin/rust-openssl" }
